# gomoku

.github/: copilot-instructions.md
backend/: .env.example  .gitignore  log_config.json  pyproject.toml
backend/alembic/: env.py
backend/docs/: chart.md
backend/scripts/: run_dev.py
backend/src/: database.py  env.py  jwt.py  main.py  models.py  schemas.py  state.py
backend/src/gomoku/: __init__.py  api_loader.py  database.py  jwt.py  main.py  models.py  not_null_column.py  room_id_manager.py  state.py
backend/src/gomoku/api/: auth.py  get_player_state.py  room.py
backend/src/gomoku/api/auth/: login_anonymous.py
backend/src/gomoku/api/room/: create_room.py  join_room.py  kick_player.py  leave_room.py  set_ready.py  start_game.py
backend/src/gomoku/api/sse/: game.py  room.py
backend/src/gomoku/state/: room_id_manager.py  server_state.py  subscribable_state.py
backend/src/gomoku/utils/: auto_alias_model.py  not_null_column.py  sse.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/lobby/: page.tsx
frontend/app/login/: page.tsx
frontend/app/room/[id]/: page.tsx
frontend/lib/: axios.ts
frontend/lib/hooks/: auth.ts
